Prevent margin between Date Text and Body collapsing if the Date Text is empty

--- a/css/style.css
+++ b/css/style.css
@@ -7931,6 +7931,9 @@ table .checkbox input[type="checkbox"] {
 .content-region .block-system .block-panel .content .field-name-field-in-activity + .field-name-field-date-text {
   margin-top: -15px;
 }
+.content-region .block-system .block-panel .content .field-name-field-date-text {
+  min-height: 1px;
+}
 .content-region .block-system .block-panel .content .field-name-field-speakers .field-label,
 .content-region .block-system .block-panel .content .field-name-field-topics .field-label,
 .content-region .block-system .block-panel .content .field-name-field-bible-reference .field-label,
