--- a/less/content.less
+++ b/less/content.less
@@ -306,6 +306,10 @@
 			margin-top: -15px;
 		}
 
+		.field-name-field-date-text {
+			min-height: 1px; // prevent an empty field causing the 15px margin being lost
+		}
+
 		.field-name-field-speakers,
 		.field-name-field-topics,
 		.field-name-field-bible-reference,
